Barra funcionando con JS, correcciones al css

--- a/peliculas/index.html
+++ b/peliculas/index.html
@@ -28,11 +28,11 @@
             <div class="search-element">
                 <h3>Buscar película:</h3>
                 <input type="text" class ="form-control"
-                placeholder="Buscar títulos:  " id="movie-search-box">
+                placeholder="Buscar títulos:  " id="movie-search-box" onkeyup="findMovies()">
 
                 <div class="search-list" id="search-list">
                     <!--lista-->
-                    <div class="search-list-item">
+                   <!--  <div class="search-list-item">
                         <div class="search-item-thumbnail">
                             <img src = "./images/cover-1.jpg">
                         </div>
@@ -40,7 +40,7 @@
                             <h3>Avengers Infinity War</h3>
                             <p>2018</p>
                         </div>
-                    </div>
+                    </div> -->
                     
                 </div>
             </div>
